--- a/src/components/doctorDetail/doctorDetail.css
+++ b/src/components/doctorDetail/doctorDetail.css
@@ -1,20 +1,3 @@
-/* <section id='doc-detail-section'>
-      <div className='doc-details'>
-        <h2 className='doc-name'>{doctor.name}</h2>
-        <p>
-          <span>Availability</span>
-          <span>{doctor.availability}</span>
-        </p>
-        <p>
-          <span>Cost</span>
-          <span>{doctor.cost}</span>
-        </p>
-
-        <button type='button'>Reserve</button>
-      </div>
-    </section> */
-/* CSS to put image to the left and details to the right. Alternating details to have different background colors, reserve button to be at the bottom */
-
 #doc-detail-section {
   padding: 1rem;
   display: flex;
@@ -24,8 +7,8 @@
 }
 
 .doc-photo-div {
-  width: 60%;
-  height: 70%;
+  width: 55%;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,7 +42,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.6rem .8rem;
+  padding: 0.6rem 0.8rem;
 }
 
 #doc-detail-section .doc-details p:nth-child(even) {
@@ -67,7 +50,7 @@
 }
 
 #doc-detail-section .doc-details p:nth-child(odd) {
- text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 #doc-detail-section .arrow {
