--- a/src/components/doctors/doctor.css
+++ b/src/components/doctors/doctor.css
@@ -7,6 +7,7 @@
   border-radius: 5px;
   width: 360px;
   min-width: 340px;
+  min-height: 250px;
 }
 
 .doc:hover {
