--- a/src/components/doctors/doctors.css
+++ b/src/components/doctors/doctors.css
@@ -18,7 +18,9 @@
   gap: 5%;
   width: 100%;
   overflow-x: scroll;
-  padding: 1rem;
+  scroll-snap-type: x mandatory;
+  box-sizing: content-box;
+  padding: 1rem 2rem;
 }
 
 .arrow {
