--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -13,6 +13,7 @@ nav {
   flex-direction: column;
   justify-content: flex-start;
   gap: 4rem;
+  z-index: 10;
 }
 
 nav h1 {
